Fixed text wrap issues on Project Events. #fix

--- a/portfolio/src/main/resources/static/css/styles.css
+++ b/portfolio/src/main/resources/static/css/styles.css
@@ -271,7 +271,7 @@ section {
 .eventContainer {
     display: flex;
     flex-direction: column;
-    min-width: 30rem;
+    min-width: 38rem;
     border-right: solid 1px var(--main-border-colour);
     padding-left: 1rem;
     padding-top: 1rem;
